Added package required for math fonts

--- a/thesis.tex
+++ b/thesis.tex
@@ -82,6 +82,7 @@
 
 \usepackage{enumitem}  % MDH: Used for more controls over `enumerate`
 \usepackage{util}  % MDH: Contains my custom commands
+\usepackage{amsmath}  % For math fonts
 
 % Set spacing around figures and tables to triple space
 \setlength{\intextsep}{2em} % Vertical space above & below [h] floats
