--- a/thesis.tex
+++ b/thesis.tex
@@ -81,8 +81,10 @@
 \usepackage{doi}
 
 \usepackage{enumitem}  % MDH: Used for more controls over `enumerate`
+\usepackage{amsmath}  % MDH: For math fonts
+
 \usepackage{util}  % MDH: Contains my custom commands
-\usepackage{amsmath}  % For math fonts
+\usepackage{notations}  % MDH: So I don't have to repeat myself so much
 
 % Set spacing around figures and tables to triple space
 \setlength{\intextsep}{2em} % Vertical space above & below [h] floats
