Created notations frontmatter

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -28,8 +28,8 @@ and by extension \systemtruth\ may not be the same each time a
 system is run.
 
 All agents will operate within a defined space~\systemspace, where
-$\systemspace \subseteq \real^\dimensions$ and $\dimensions \geq 1$
-dimensions, as described by~\cite[para.~2.1]{Cohensius2017}.
+$\systemspace \subseteq \real^k$ and $k \geq 1$ dimensions, as described
+by~\cite[para.~2.1]{Cohensius2017}.
 Specifically, this paper will focus on interval spaces of
 $\systemspace = [a, b]^1$.
 Spaces of $\systemspace = [a, b]^2$ or higher could also be used, but since
