--- a/thesis.tex
+++ b/thesis.tex
@@ -131,7 +131,7 @@ For a Single Line While Including Everything}
     \listoftables
     \listoffigures
 
-%    \include{notation}  % optional
+    \include{content/frontmatter/notation}  % optional
     \include{content/frontmatter/acronyms}  % optional
     %}}}
     %{{{ The main body of the thesis
