--- a/notations.sty
+++ b/notations.sty
@@ -15,21 +15,22 @@ type them, reducing mistakes and making it easier to change them.]
 
 %% Used to raise chi, since it annoys me that it's lower
 % Modified from https://tex.stackexchange.com/a/103898/277236
-\newcommand{\@raisedchi}[2]{\raisebox{\depth}{$#1\chi$}}
-\DeclareRobustCommand{\raisedchi}{{\mathpalette\@raisedchi\relax}}
+\newcommand{\@innerraisedchi}[2]{\raisebox{\depth}{$#1\chi$}}
+\DeclareRobustCommand{\@raisedchi}{{\mathpalette\@innerraisedchi\relax}}
 
 % Solo symbols
 \@newnotation*{\agent}{a}
 \@newnotation*{\agents}{\mathbb{A}}
-\@newnotation*{\dimensions}{k}
+\@newnotation*{\cost}{\mathbb{C}}
 \@newnotation*{\loss}{\mathbb{L}}
 \@newnotation*{\real}{\mathbb{R}}
 \@newnotation*{\system}{\mathbb{S}}
-\@newnotation*{\systemspace}{\raisedchi}
+\@newnotation*{\systemspace}{\@raisedchi}
 \@newnotation*{\truth}{\top}
 
 % Combinations
 \@newnotation*{\agenttruth}{\truth_\agent}
 \@newnotation*{\systemagents}{\system_\agents}
+\@newnotation*{\systemcost}{\cost{(\system)}}
 \@newnotation*{\systemloss}{\loss{(\system)}}
 \@newnotation*{\systemtruth}{\truth_\system}
