--- a/notations.sty
+++ b/notations.sty
@@ -29,6 +29,7 @@ type them, reducing mistakes and making it easier to change them.]
 \@newnotation*{\truth}{\top}
 
 % Combinations
+\@newnotation*{\agentcost}{\cost{(\agent)}}
 \@newnotation*{\agenttruth}{\truth_\agent}
 \@newnotation*{\systemagents}{\system_\agents}
 \@newnotation*{\systemcost}{\cost{(\system)}}
