Added \agentcost to notations

--- a/content/frontmatter/notation.tex
+++ b/content/frontmatter/notation.tex
@@ -13,6 +13,7 @@
     \begin{tabular}{ll}
         \notationheader{Equations}
         \notationdesc{\agent}{An individual agent}
+        \notationdesc{\agentcost}{The cost of using an individual agent}
         \notationdesc{\agents}{The set of all agents}
         \notationdesc{\cost}{Cost}
         \notationdesc{\loss}{Loss}
