--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -128,7 +128,7 @@ where $\systemtruth^k$ and $\truth^k$ are the $k$th
 dimension of the estimated and real truth respectively.
 
 The next criteria used to judge systems is the cost of the system.
-The total cost of a system \systemcost\ is described by
+The total cost of a system \systemcost\ is calculated as
 \begin{equation}
     \systemcost =
     \sum_{\agent \in \agents}{
@@ -146,7 +146,6 @@ The goal of system cost as a criteria is to determine if a less-costly system
 could perform just as well if not better than one with a higher cost.
 % TODO: Would ratios between expert an untrained agents are beneficial? Maybe
 % useful for knowing if adding an agent is useful?
-
 
 % - Number of measurements?
 %   - Expert
