Weight Mechanism => Weighting Mechanism

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -195,8 +195,8 @@ could perform just as well if not better than one with a higher cost.
 % - Weight by Ranked Choice
 % - . . .
 
-\subsection{Weight Mechanisms}\label{subsec:weight-mechanisms}
-% - Explain what weight mechanisms are
+\subsection{Weighting Mechanisms}\label{subsec:weighting-mechanisms}
+% - Explain what weighting Mechanisms are
 %
 % - Vote for closest (implemented by \cite{Cohensius2017})
 % - Borda
