--- a/content/frontmatter/notation.tex
+++ b/content/frontmatter/notation.tex
@@ -17,7 +17,9 @@
         \notationdesc{\agents}{The set of all agents}
         \notationdesc{\cost}{Cost}
         \notationdesc{\loss}{Loss}
+        \notationdesc{\mean}{Mean/Average}
         \notationdesc{\real}{The set of all real numbers}
+        \notationdesc{\stddeviation}{Standard deviation}
         \notationdesc{\system}{A system}
         \notationdesc{\systemspace}{The space within a system operates}
         \notationdesc{\truth}{Truth}
@@ -26,6 +28,12 @@
         \notationdesc{\systemcost}{The cost of a system}
         \notationdesc{\systemloss}{The loss of a system}
         \notationdesc{\systemtruth}{The truth as estimated by a system}
+
+        \notationheader{Distributions}
+        \notationdesc{\uniform}{Uniform on the interval $[a, b]$}
+        \notationdesc{\gaussian}{Normal (Gaussian) with $\text{mean} = \mean$
+            and $\text{std. deviation} = \stddeviation$}
+        \notationdesc{\betadist}{Beta distribution}
     \end{tabular}
 }
 
