--- a/notations.sty
+++ b/notations.sty
@@ -23,7 +23,9 @@ type them, reducing mistakes and making it easier to change them.]
 \@newnotation*{\agents}{\mathbb{A}}
 \@newnotation*{\cost}{\mathbb{C}}
 \@newnotation*{\loss}{\mathbb{L}}
+\@newnotation*{\mean}{\mu}
 \@newnotation*{\real}{\mathbb{R}}
+\@newnotation*{\stddeviation}{\sigma}
 \@newnotation*{\system}{\mathbb{S}}
 \@newnotation*{\systemspace}{\@raisedchi}
 \@newnotation*{\truth}{\top}
@@ -35,3 +37,8 @@ type them, reducing mistakes and making it easier to change them.]
 \@newnotation*{\systemcost}{\cost{(\system)}}
 \@newnotation*{\systemloss}{\loss{(\system)}}
 \@newnotation*{\systemtruth}{\truth_\system}
+
+% Distributions
+\@newnotation*{\uniform}{\mathcal{U}_{[a, b]}}
+\@newnotation*{\gaussian}{\mathcal{N}(\mean, \stddeviation)}
+\@newnotation*{\betadist}{\mathcal{B}(\alpha, \beta)}
