--- a/thesis.tex
+++ b/thesis.tex
@@ -50,8 +50,9 @@
 \usepackage{graphicx}          % add graphics
 \usepackage{subcaption}
 \usepackage{url}
-%\usepackage{flafter}           % Cause floats to appear after
+\usepackage{flafter}           % Cause floats to appear after
                                % environment.
+                               % MDH: This was originally commented out.
 %\usepackage{siunitx}           % Provides standard formatting of SI units.
 \usepackage{listings}          % Use when including computer code.
 
