--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -30,6 +30,12 @@
 This is placeholder text to ensure \autoref{tab:voting-distributions} stays
 in the correct location. % FIXME
 
+% - Distribution of votes
+%     - Uniform
+%     - Gaussian
+%     - Bimodal about center
+%     - Skewed?
+
 \begin{table}[!t]
     % increase table row spacing, adjust to taste
     \renewcommand{\arraystretch}{1.3}
