Renamed distribution notation commands

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -48,9 +48,9 @@ in the correct location. % FIXME
         \hline
         Distribution & Notation & Percent inside Extents \\
         \hline
-        Uniform & \uniform & 100\% \\
+        Uniform & \uniformdist & 100\% \\
         \hline
-        Normal (Gaussian) & \gaussian & 99.7\% \\
+        Normal (Gaussian) & \gaussiandist & 99.7\% \\
         \hline
         Beta & \betadist & 100\% \\
         \hline
