--- a/content/frontmatter/notation.tex
+++ b/content/frontmatter/notation.tex
@@ -30,8 +30,8 @@
         \notationdesc{\systemtruth}{The truth as estimated by a system}
 
         \notationheader{Distributions}
-        \notationdesc{\uniform}{Uniform on the interval $[a, b]$}
-        \notationdesc{\gaussian}{Normal (Gaussian) with $\text{mean} = \mean$
+        \notationdesc{\uniformdist}{Uniform on the interval $[a, b]$}
+        \notationdesc{\gaussiandist}{Normal (Gaussian) with $\text{mean} = \mean$
             and $\text{std. deviation} = \stddeviation$}
         \notationdesc{\betadist}{Beta distribution}
     \end{tabular}
