--- a/notations.sty
+++ b/notations.sty
@@ -39,6 +39,6 @@ type them, reducing mistakes and making it easier to change them.]
 \@newnotation*{\systemtruth}{\truth_\system}
 
 % Distributions
-\@newnotation*{\uniform}{\mathcal{U}_{[a, b]}}
-\@newnotation*{\gaussian}{\mathcal{N}(\mean, \stddeviation)}
+\@newnotation*{\uniformdist}{\mathcal{U}_{[a, b]}}
+\@newnotation*{\gaussiandist}{\mathcal{N}(\mean, \stddeviation)}
 \@newnotation*{\betadist}{\mathcal{B}(\alpha, \beta)}
