--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -183,6 +183,9 @@ While the extent determines the general boundaries, some distributions allow
 numbers slightly outside these ranges.
 For these distributions, the percent of votes inside the extents are
 specified in \autoref{tab:voting-distributions}.
+These extents are not meant to be known by the system, but are rather an
+estimation of the range of error about \truth\ a measurement in the real world
+might have.
 
 The vote distribution determines which distribution is used by the agent when
 attempting to measure \truth.
