Basic explanation about mechanisms

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -209,8 +209,12 @@ agents it's using to estimate~\truth.
 
 
 \section{Mechanisms}\label{sec:mechanisms}
-% - Explain what mechanisms are, as well as my expansion using weight
-% mechanisms.
+\textit{Mechanisms} are a group of strategies used to accomplish some goal.
+These are different from the mechanisms described by~\cite{Cohensius2017} in
+that they do not exclusively include voting rules.
+Instead, these have been relabeled to `voting mechanisms' and the definition
+of mechanisms has been expanded to also include rules used by agents to
+assign weights to proxies, which rules are named `weighting mechanisms.'
 
 \subsection{Voting Mechanisms}\label{subsec:voting-mechanisms}
 % - Explain what voting mechanisms are
