Started writing about voting mechanisms

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -217,6 +217,8 @@ of mechanisms has been expanded to also include rules used by agents to
 assign weights to proxies, which rules are named `weighting mechanisms.'
 
 \subsection{Voting Mechanisms}\label{subsec:voting-mechanisms}
+\textit{Voting mechanisms} are a concept borrowed from~\cite{Cohensius2017},
+there simply labeled `mechanisms.'
 % - Explain what voting mechanisms are
 
 \subsubsection{Candidate Mechanisms}\label{subsubsec:candidate-mechanisms}
